# autonomous-ai-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base_agent.py  editor_agent.py  orchestrator.py  research_agent.py  scheduler_agent.py  writer_agent.py
app/api/: deps.py
app/api/routes/: analytics.py  content.py  health.py  pipeline.py
app/db/: session.py
app/models/: __init__.py  content.py  pipeline_state.py  task.py
app/tasks/: celery_tasks.py
app/tools/: __init__.py  memory_tool.py  scrape_tool.py  search_tool.py
app/utils/: __init__.py  logger.py  retry.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  mockData.ts
frontend/src/components/analytics/: ContentChart.tsx  MetricCard.tsx  ScoreChart.tsx  TopicsChart.tsx
frontend/src/hooks/: useAnalytics.ts  useContent.ts  usePipeline.ts  useTheme.ts  useToast.ts  useTypewriter.ts  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Analytics.tsx  Content.tsx  ContentDetail.tsx  Dashboard.tsx  Pipeline.tsx  Settings.tsx
frontend/src/store/: commandPaletteStore.ts  contentStore.ts  notificationStore.ts  pipelineStore.ts  themeStore.ts  toastStore.ts  topicQueueStore.ts
frontend/src/types/: index.ts
tests/: test_agents.py  test_api.py  test_tools.py
(+34 files in other folders)
