[tool.poetry]
name = "autonomous-ai-pipeline"
version = "0.1.0"
description = "Autonomous multi-agent AI content research and scheduling engine."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "0.136.1"
uvicorn = { extras = ["standard"], version = "0.46.0" }
pydantic = "2.12.5"
pydantic-settings = "2.10.1"
sqlalchemy = { extras = ["asyncio"], version = "2.0.49" }
asyncpg = "0.31.0"
redis = "6.4.0"
celery = { extras = ["redis"], version = "5.6.3" }
flower = "2.0.1"
structlog = "25.5.0"
httpx = "0.28.1"
beautifulsoup4 = "4.14.3"
langgraph = "1.2.0"
langchain-community = "0.4.1"
langchain-groq = "1.1.2"
tavily-python = "0.7.12"
crewai = "1.14.4"
python-dotenv = "1.2.2"
greenlet = "3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
